--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.12.1",
     "reflect-metadata": "^0.1.13",
+    "sass": "^1.71.0",
     "styled-components": "^5.3.11",
     "viem": "^1.0.7",
     "vite-plugin-node-polyfills": "^0.9.0",
