--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-multistep": "^5.5.9",
     "react-qr-code": "^2.0.12",
     "react-router-dom": "^6.12.1",
     "reflect-metadata": "^0.1.13",
