--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,6 +41,10 @@ jobs:
         run: npm run build
         env:
           VITE_ENV: production
+          VITE_WEB3AUTH_CLIENT_ID: { secrets.VITE_WEB3AUTH_CLIENT_ID }
+          VITE_WEB3AUTH_CLIENT_VERIFIER_NAME: { secrets.VITE_WEB3AUTH_CLIENT_VERIFIER_NAME }
+          VITE_AUTH0_CLIENT_ID: { secrets.VITE_AUTH0_CLIENT_ID }
+          VITE_API_HOST: { secrets.VITE_API_HOST }
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
